--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;800&display=swap" rel="stylesheet">
         <title>about</title>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-        <link href="test.css" rel="stylesheet" type="text/css" media="all"><style>
+        <link href="/style/test.css" rel="stylesheet" type="text/css" media="all"><style>
         img{margin: 20px auto}
         @media only screen and (min-width: 650px) {
             .about{margin-top: 20px; display: grid; grid-template-columns: 1fr 3fr;}
@@ -15,17 +15,17 @@
     <body>
         <div class="sidebar">
             <div>
-            <p><a href="website/home">home</a></p>
+            <p><a href="/website/home">home</a></p>
             <ul>
-                <li><a href="website/about">about</a></li>
-                <li><a href="website/musicians">musicians</a></li>
-                <li><a href="website/websites">websites</a></li>
-                <li><a href="website/words">words</a></li>
-                <li><a href="website/doodles">doodles</a></li>
-                <li><a href="website/blender">blender</a></li>
-                <li><a href="website/misc">misc</a></li>
-                <li><a href="website/buttons">buttons</a></li>
-                <li><a href="website/sitelog">sitelog</a></li>
+                <li><a href="/website/about">about</a></li>
+                <li><a href="/website/musicians">musicians</a></li>
+                <li><a href="/website/websites">websites</a></li>
+                <li><a href="/website/words">words</a></li>
+                <li><a href="/website/doodles">doodles</a></li>
+                <li><a href="/website/blender">blender</a></li>
+                <li><a href="/website/misc">misc</a></li>
+                <li><a href="/website/buttons">buttons</a></li>
+                <li><a href="/website/sitelog">sitelog</a></li>
             </ul></div>
         </div>
         <div class="main">
@@ -33,16 +33,16 @@
     <h1>about me</h1>
     
         <details class="navbar">
-            <summary><a href="website/home">home</a></summary>
-            <a href="website/about">about</a> . 
-            <a href="website/musicians">musicians</a> . 
-            <a href="website/websites">websites</a><br>
-            <a href="website/words">words</a> . 
-            <a href="website/doodles">doodles</a> . 
-            <a href="website/blender">blender</a> . 
-            <a href="website/misc">misc</a><br>
-            <a href="website/buttons">buttons</a> . 
-            <a href="website/sitelog">sitelog</a>
+            <summary><a href="/website/home">home</a></summary>
+            <a href="/website/about">about</a> . 
+            <a href="/website/musicians">musicians</a> . 
+            <a href="/website/websites">websites</a><br>
+            <a href="/website/words">words</a> . 
+            <a href="/website/doodles">doodles</a> . 
+            <a href="/website/blender">blender</a> . 
+            <a href="/website/misc">misc</a><br>
+            <a href="/website/buttons">buttons</a> . 
+            <a href="/website/sitelog">sitelog</a>
         </details>
 
         <div class="about">
