--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
         <div class="r">
             <p style="font-size:max(5vw, 5vh)"><b>nowhere in<br>particular.</b><br>
+            <p style="font-size:max(2vh, 2vh)">under construction!</p>
             <a href="home">enter</a></p>
         </div>
     </body>
