--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;800&display=swap" rel="stylesheet">
         <title>about</title>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-        <link href="/style/test.css" rel="stylesheet" type="text/css" media="all"><style>
+        <link href="/website/styles/test.css" rel="stylesheet" type="text/css" media="all"><style>
         img{margin: 20px auto}
         @media only screen and (min-width: 650px) {
             .about{margin-top: 20px; display: grid; grid-template-columns: 1fr 3fr;}
