--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             margin: 0px;
             height: 100vh;
             font-family: 'Inter', sans-serif;}
-            .l, .r{height:100vh; display: flex; flex-direction: row;align-content: center;}
+            .l, .r{height:100vh; display: flex; align-content: center;}
 
             .l{background-color: #f0f0f0;}
             .r{background-color: #404040;
