--- a/blender.html
+++ b/blender.html
@@ -6,6 +6,12 @@
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="/website/styles/test.css" rel="stylesheet" type="text/css" media="all"><style>
         .pyramid:hover{text-decoration-color: #000429; color: #ddba39; background-color: #000429}
+        .images{display: flex; flex-direction: column; line-height:0; column-count: 2; column-gap: 12px; margin-top: 20px}
+        .images img{margin-bottom: 6px; width: 100%}
+        .images img:hover{transform: scale(125%)}
+        @media only screen and (max-width: 600px) {
+            .images{column-count: 1;}
+        }
         </style>
     </head>
 
@@ -43,6 +49,7 @@
         </details>
 
         <p>One of my favorite passtimes is making things (mainly wallpapers) with Blender. Very geometric and consisting of simple lighting and shapes and little to no color. (i should make colorful things more often...) These are a bunch of them.
+            Sorry if it takes a while to load it all-
             <br>btw, all the images/gifs (just like all of the site) are licensed under <a href="/website/LICENSE.txt" >GPLv3</a>.
         </p>
         <ul>
@@ -50,14 +57,15 @@
             <li><a href="blender/buttons">buttons (7)</a></li>
             <li><a href="blender/cmyk">cmyk (5)</a></li></ul>
         <br>
-        <img src="blender/ampersand.png" alt="ampersand" width="100%">
-        <img src="blender/angle2.png" alt="angle2" width="100%">
-        <img src="blender/arrow2.png" alt="arrow2" width="100%">
-        <img src="blender/cloud.png" alt="cloud" width="100%">
-        <img src="blender/cuberootof2.png" alt="cuberootof2" width="100%">
-        <img src="blender/idk2.png" alt="idk2" width="100%">
-        <img src="blender/lines.png" alt="lines" width="100%">
-        
+        <div class="images">
+        <img src="blender/ampersand.png" alt="ampersand">
+        <img src="blender/angle2.png" alt="angle2">
+        <img src="blender/arrow2.png" alt="arrow2">
+        <img src="blender/cloud.png" alt="cloud">
+        <img src="blender/cuberootof2.png" alt="cuberootof2">
+        <img src="blender/idk2.png" alt="idk2">
+        <img src="blender/lines.png" alt="lines">
+        </div>
         </div>
     </body>
 </html>
