--- a/blender.html
+++ b/blender.html
@@ -6,10 +6,10 @@
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="/website/styles/test.css" rel="stylesheet" type="text/css" media="all"><style>
         .pyramid:hover{text-decoration-color: #000429; color: #ddba39; background-color: #000429}
-        .images{display: grid;line-height:0; column-count: 2; column-gap: 12px; margin-top: 20px}
-        .images img{margin-bottom: 6px; width: 100%}
+        #images{display: grid;line-height:0; column-count: 2; column-gap: 12px; margin-top: 20px}
+        #images img{margin-bottom: 6px; width: 100%}
         @media only screen and (max-width: 600px) {
-            .images{column-count: 1;}
+            #images{column-count: 1;}
         }
         </style>
     </head>
@@ -56,7 +56,7 @@
             <li><a href="blender/buttons">buttons (7)</a></li>
             <li><a href="blender/cmyk">cmyk (5)</a></li></ul>
         <br>
-        <div class="images">
+        <div id="images">
         <img src="blender/ampersand.png" alt="ampersand">
         <img src="blender/angle2.png" alt="angle2">
         <img src="blender/arrow2.png" alt="arrow2">
