--- a/blender.html
+++ b/blender.html
@@ -6,9 +6,8 @@
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="/website/styles/test.css" rel="stylesheet" type="text/css" media="all"><style>
         .pyramid:hover{text-decoration-color: #000429; color: #ddba39; background-color: #000429}
-        #images{display: grid;line-height:0; column-count: 2; column-gap: 12px; margin-top: 20px}
-        #images img{margin-bottom: 6px; width: 100%}
-        @media only screen and (max-width: 600px) {
+        #images{line-height:0; column-count: 2; column-gap: 12px; margin-top: 20px}
+        @media only screen and (max-width: 500px) {
             #images{column-count: 1;}
         }
         </style>
