--- a/blender/cmyk.html
+++ b/blender/cmyk.html
@@ -1,19 +1,56 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet"> 
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
-        <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;800&display=swap" rel="stylesheet">
         <title>blender: cmyk</title>
-        <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"></head>
+        <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
+        <link href="/website/styles/test.css" rel="stylesheet" type="text/css" media="all"><style>
+        #images{line-height:0; column-count: 2; column-gap: 12px; margin-top: 20px}
+        @media only screen and (max-width: 500px) {
+            #images{column-count: 1;}
+        }
+        </style>
+    </head>
 
-    <body><div class="page"><div class="main">
-        <h1>cmyk</h1>
-        ← <a class="back" href="/website/blender">back</a>
+    <body>
+        <div class="sidebar">
+            <div>
+            <p><a href="/website/home">home</a></p>
+            <ul>
+                <li><a href="/website/about">about</a></li>
+                <li><a href="/website/musicians">musicians</a></li>
+                <li><a href="/website/websites">websites</a></li>
+                <li><a href="/website/words">words</a></li>
+                <li><a href="/website/doodles">doodles</a></li>
+                <li><a href="/website/blender">blender</a></li>
+                <li><a href="/website/misc">misc</a></li>
+                <li><a href="/website/buttons">buttons</a></li>
+                <li><a href="/website/sitelog">sitelog</a></li>
+            </ul></div>
+        </div>
+        <div class="main">
+            
+    <h1>CMYK</h1>
+    
+        <details class="navbar">
+            <summary><a href="/website/home">home</a></summary>
+            <a href="/website/about">about</a> . 
+            <a href="/website/musicians">musicians</a> . 
+            <a href="/website/websites">websites</a><br>
+            <a href="/website/words">words</a> . 
+            <a href="/website/doodles">doodles</a> . 
+            <a href="/website/blender">blender</a> . 
+            <a href="/website/misc">misc</a><br>
+            <a href="/website/buttons">buttons</a> . 
+            <a href="/website/sitelog">sitelog</a>
+        </details>
+
+        <div class="images">
         <img src="/website/blender/cmyk/cmyk.png" alt="cmyk" width="100%" style="padding-top: 20px">
         <img src="/website/blender/cmyk/cmyk3.png" alt="cmyk3" width="100%">
         <img src="/website/blender/cmyk/cmyk4.png" alt="cmyk4" width="100%">
         <img src="/website/blender/cmyk/cmyk7.png" alt="cmyk7" width="100%">
-        <img src="/website/blender/cmyk/cmyk8.png" alt="cmyk8" width="100%">
-        <p>↑ <a href="#">back to top</a></p>
-    </div></div></body></html>
+        <img src="/website/blender/cmyk/cmyk8.png" alt="cmyk8" width="100%"></div>
+        </div>
+    </body>
+</html>
