--- a/blender/pyramids.html
+++ b/blender/pyramids.html
@@ -1,22 +1,60 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet"> 
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
-        <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;800&display=swap" rel="stylesheet">
         <title>blender: pyramids</title>
-        <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
+        <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
+        <link href="/website/styles/test.css" rel="stylesheet" type="text/css" media="all"><style>
         body {background-color: #000429;color: #ddba39;}
         a{color: #ddba39}
         a:hover{color: #000429; background-color: #ddba39; text-decoration-color: #ddba39;}
         .page{border-color: #ddba39}
-    </style></head>
-    <body><div class="page"><div class="main">
-        <h1>pyramids</h1>
-        ← <a class="back" href="/website/blender" >back</a>
-        <img src="/website/blender/pyramids/pyramids.png" alt="pyramids" width="100%" style="padding-top:20px">
-        <img src="/website/blender/pyramids/pyramids2.png" alt="pyramids2" width="100%">
-        <img src="/website/blender/pyramids/pyramids3.png" alt="pyramids3" width="100%">
-        <img src="/website/blender/pyramids/pyramids4.png" alt="pyramids4" width="100%">
-        <p>↑ <a href="#">back to top</a></p>
-    </div></div></body></html>
+        #images{line-height:0; column-count: 2; column-gap: 12px; margin-top: 20px}
+        .sidebar, .page{border-color: #ddba39}
+        @media only screen and (max-width: 500px) {
+            #images{column-count: 1;}
+        }
+        </style>
+    </head>
+
+    <body>
+        <div class="sidebar">
+            <div>
+            <p><a href="/website/home">home</a></p>
+            <ul>
+                <li><a href="/website/about">about</a></li>
+                <li><a href="/website/musicians">musicians</a></li>
+                <li><a href="/website/websites">websites</a></li>
+                <li><a href="/website/words">words</a></li>
+                <li><a href="/website/doodles">doodles</a></li>
+                <li><a href="/website/blender">blender</a></li>
+                <li><a href="/website/misc">misc</a></li>
+                <li><a href="/website/buttons">buttons</a></li>
+                <li><a href="/website/sitelog">sitelog</a></li>
+            </ul></div>
+        </div>
+        <div class="main">
+            
+    <h1>pyramids</h1>
+    
+        <details class="navbar">
+            <summary><a href="/website/home">home</a></summary>
+            <a href="/website/about">about</a> . 
+            <a href="/website/musicians">musicians</a> . 
+            <a href="/website/websites">websites</a><br>
+            <a href="/website/words">words</a> . 
+            <a href="/website/doodles">doodles</a> . 
+            <a href="/website/blender">blender</a> . 
+            <a href="/website/misc">misc</a><br>
+            <a href="/website/buttons">buttons</a> . 
+            <a href="/website/sitelog">sitelog</a>
+        </details>
+
+        <div class="images">
+            <img src="/website/blender/pyramids/pyramids.png" alt="pyramids">
+            <img src="/website/blender/pyramids/pyramids2.png" alt="pyramids2">
+            <img src="/website/blender/pyramids/pyramids3.png" alt="pyramids3">
+            <img src="/website/blender/pyramids/pyramids4.png" alt="pyramids4"></div>
+        </div>
+    </body>
+</html>
