--- a/blender/buttons.html
+++ b/blender/buttons.html
@@ -56,10 +56,10 @@
         <img src="/website/blender/buttons/waves.gif" alt="waves">
         <p>But at least I got some nice still renders.</p>
         <div id="images">
-        <img src="/website/blender/buttons/sticks1.png" alt="sticks1" width="100%">
-        <img src="/website/blender/buttons/sticks2.png" alt="sticks2" width="100%">
-        <img src="/website/blender/buttons/walking.png" alt="walking" width="100%">
-        <img src="/website/blender/buttons/grid.png" alt="grid" width="100%"></div>
+        <img src="/website/blender/buttons/sticks1.png" alt="sticks1">
+        <img src="/website/blender/buttons/sticks2.png" alt="sticks2">
+        <img src="/website/blender/buttons/walking.png" alt="walking">
+        <img src="/website/blender/buttons/grid.png" alt="grid"></div>
         <p>This was my first time doing buttons, so it's pretty basic, but i wanna do it again some other time.</p>
         <p>Edit: i did!!</p>
         <img src="/website/blender/buttons/carpediem.gif" alt="carpediem">
