--- a/blender/cmyk.html
+++ b/blender/cmyk.html
@@ -46,11 +46,11 @@
         </details>
 
         <div class="images">
-        <img src="/website/blender/cmyk/cmyk.png" alt="cmyk" width="100%" style="padding-top: 20px">
-        <img src="/website/blender/cmyk/cmyk3.png" alt="cmyk3" width="100%">
-        <img src="/website/blender/cmyk/cmyk4.png" alt="cmyk4" width="100%">
-        <img src="/website/blender/cmyk/cmyk7.png" alt="cmyk7" width="100%">
-        <img src="/website/blender/cmyk/cmyk8.png" alt="cmyk8" width="100%"></div>
+        <img src="/website/blender/cmyk/cmyk.png" alt="cmyk">
+        <img src="/website/blender/cmyk/cmyk3.png" alt="cmyk3">
+        <img src="/website/blender/cmyk/cmyk4.png" alt="cmyk4">
+        <img src="/website/blender/cmyk/cmyk7.png" alt="cmyk7">
+        <img src="/website/blender/cmyk/cmyk8.png" alt="cmyk8"></div>
         </div>
     </body>
 </html>
