--- a/blender/cmyk.html
+++ b/blender/cmyk.html
@@ -45,7 +45,7 @@
             <a href="/website/sitelog">sitelog</a>
         </details>
 
-        <div class="images">
+        <div id="images">
         <img src="/website/blender/cmyk/cmyk.png" alt="cmyk">
         <img src="/website/blender/cmyk/cmyk3.png" alt="cmyk3">
         <img src="/website/blender/cmyk/cmyk4.png" alt="cmyk4">
