--- a/blender/pyramids.html
+++ b/blender/pyramids.html
@@ -50,7 +50,7 @@
             <a href="/website/sitelog">sitelog</a>
         </details>
 
-        <div class="images">
+        <div id="images">
             <img src="/website/blender/pyramids/pyramids.png" alt="pyramids">
             <img src="/website/blender/pyramids/pyramids2.png" alt="pyramids2">
             <img src="/website/blender/pyramids/pyramids3.png" alt="pyramids3">
