--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
             <div>
             <p><a href="/website/home">home</a></p>
             <ul>
-                <li><a href="/website/about">about</a></li>
+                <li><b>about</b></li>
                 <li><a href="/website/musicians">musicians</a></li>
                 <li><a href="/website/websites">websites</a></li>
                 <li><a href="/website/words">words</a></li>
@@ -34,7 +34,7 @@
     
         <details class="navbar">
             <summary><a href="/website/home">home</a></summary>
-            <a href="/website/about">about</a> . 
+            <b>about</b> . 
             <a href="/website/musicians">musicians</a> . 
             <a href="/website/websites">websites</a><br>
             <a href="/website/words">words</a> . 
