--- a/blender.html
+++ b/blender.html
@@ -23,7 +23,7 @@
                 <li><a href="/website/websites">websites</a></li>
                 <li><a href="/website/words">words</a></li>
                 <li><a href="/website/doodles">doodles</a></li>
-                <li><a href="/website/blender">blender</a></li>
+                <li><b>blender</b></li>
                 <li><a href="/website/misc">misc</a></li>
                 <li><a href="/website/buttons">buttons</a></li>
                 <li><a href="/website/sitelog">sitelog</a></li>
@@ -40,7 +40,7 @@
             <a href="/website/websites">websites</a><br>
             <a href="/website/words">words</a> . 
             <a href="/website/doodles">doodles</a> . 
-            <a href="/website/blender">blender</a> . 
+            <b>blender</b> . 
             <a href="/website/misc">misc</a><br>
             <a href="/website/buttons">buttons</a> . 
             <a href="/website/sitelog">sitelog</a>
