--- a/blender/pyramids.html
+++ b/blender/pyramids.html
@@ -20,17 +20,11 @@
     <body>
         <div class="sidebar">
             <div>
-            <p><a href="/website/home">home</a></p>
+            <p><a href="/website/blender">blender</a></p>
             <ul>
-                <li><a href="/website/about">about</a></li>
-                <li><a href="/website/musicians">musicians</a></li>
-                <li><a href="/website/websites">websites</a></li>
-                <li><a href="/website/words">words</a></li>
-                <li><a href="/website/doodles">doodles</a></li>
-                <li><a href="/website/blender">blender</a></li>
-                <li><a href="/website/misc">misc</a></li>
-                <li><a href="/website/buttons">buttons</a></li>
-                <li><a href="/website/sitelog">sitelog</a></li>
+                <li><b>pyramids</b></li>
+                <li><a href="buttons">buttons</a></li>
+                <li><a href="cmyk">cmyk</a></li>
             </ul></div>
         </div>
         <div class="main">
@@ -38,16 +32,10 @@
     <h1>pyramids</h1>
     
         <details class="navbar">
-            <summary><a href="/website/home">home</a></summary>
-            <a href="/website/about">about</a> . 
-            <a href="/website/musicians">musicians</a> . 
-            <a href="/website/websites">websites</a><br>
-            <a href="/website/words">words</a> . 
-            <a href="/website/doodles">doodles</a> . 
-            <a href="/website/blender">blender</a> . 
-            <a href="/website/misc">misc</a><br>
-            <a href="/website/buttons">buttons</a> . 
-            <a href="/website/sitelog">sitelog</a>
+            <summary><a href="/website/blender">back to blender</a></summary>
+                <b>pyramids</b> . 
+                <a href="buttons">buttons</a> . 
+                <a href="cmyk">cmyk</a>
         </details>
 
         <div id="images">
