--- a/blender/pyramids.html
+++ b/blender/pyramids.html
@@ -10,6 +10,7 @@
         a:hover{color: #000429; background-color: #ddba39; text-decoration-color: #ddba39;}
         .page{border-color: #ddba39}
         #images{line-height:0; column-count: 2; column-gap: 12px; margin-top: 20px}
+        #images img{width: 100%; margin-top: 12px}
         .sidebar, .page{border-color: #ddba39}
         @media only screen and (max-width: 500px) {
             #images{column-count: 1;}
