--- a/blender.html
+++ b/blender.html
@@ -7,6 +7,7 @@
         <link href="/website/styles/test.css" rel="stylesheet" type="text/css" media="all"><style>
         .pyramid:hover{text-decoration-color: #000429; color: #ddba39; background-color: #000429}
         #images{line-height:0; column-count: 2; column-gap: 12px; margin-top: 20px}
+        #images img{width: 100%; margin-top: 12px}
         @media only screen and (max-width: 500px) {
             #images{column-count: 1;}
         }
@@ -54,7 +55,6 @@
             <li><a href="blender/pyramids" class="pyramid" >pyramids (4)</a></li>
             <li><a href="blender/buttons">buttons (7)</a></li>
             <li><a href="blender/cmyk">cmyk (5)</a></li></ul>
-        <br>
         <div id="images">
         <img src="blender/ampersand.png" alt="ampersand">
         <img src="blender/angle2.png" alt="angle2">
