--- a/blender/cmyk.html
+++ b/blender/cmyk.html
@@ -6,6 +6,7 @@
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="/website/styles/test.css" rel="stylesheet" type="text/css" media="all"><style>
         #images{line-height:0; column-count: 2; column-gap: 12px; margin-top: 20px}
+        #images img{width: 100%; margin-top: 12px}
         @media only screen and (max-width: 500px) {
             #images{column-count: 1;}
         }
