--- a/blender/cmyk.html
+++ b/blender/cmyk.html
@@ -25,7 +25,7 @@
         </div>
         <div class="main">
             
-    <h1>CMYK</h1>
+    <h1>cmyk</h1>
     
         <details class="navbar">
             <summary><a href="/website/blender">back to blender</a></summary>
