--- a/buttons.html
+++ b/buttons.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Literata:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>buttons</title>
         <link href="styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
             body{background-color: #b8cadf;
                 color: #101010;
-                font-family: 'Libre Baskerville', serif;}
+                font-family: 'Literata', serif;}
             h1{font-size: min(10vw, 3rem); font-style: italic;}
             h2{margin-bottom: 10px; font-style: italic; font-size: 1.5rem;}
             h2::before{content: "- "; color: #5d5e6c;}
@@ -30,7 +30,7 @@
                 <li><a href="/website/doodles">doodles</a></li>
                 <li><a href="/website/blender">blender</a></li>
                 <li><a href="/website/misc">misc</a></li>
-                <li><b>buttons</b>></li>
+                <li><b>buttons</b></li>
                 <li><a href="/website/sitelog">sitelog</a></li>
             </ul></div>
         </div>
