--- a/buttons.html
+++ b/buttons.html
@@ -15,7 +15,7 @@
             a:hover{text-decoration-color:#101010; background-color: #101010; color: #b8cadf}
             a.button::after, a.button::before{content:""}
             a.button:hover{background-color: #00000000; text-decoration-color: #000000}
-            .page{border-color: #5d5e6c}</style>
+            .page, .main{border-color: #5d5e6c}</style>
     </head>
 
     <body>
