--- a/buttons.html
+++ b/buttons.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="https://fonts.googleapis.com/css2?family=Literata:ital,wght@0,400;1,700&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Literata:ital,wght@0,400;1,400;1,700&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>buttons</title>
         <link href="styles/test.css" rel="stylesheet" type="text/css" media="all"><style>
@@ -11,7 +11,7 @@
             h1{font-size: min(10vw, 3rem); font-style: italic;}
             h2{margin-bottom: 10px; font-style: italic; font-size: 1.5rem;}
             h2::before{content: "- "; color: #5d5e6c;}
-            a{font-weight: bold; color: #101010; text-decoration-color:#5d5e6c;font-style: italic; text-decoration-thickness: 2px;}
+            a{color: #101010; text-decoration-color:#5d5e6c;font-style: italic; text-decoration-thickness: 2px;}
             a:hover{text-decoration-color:#101010; background-color: #101010; color: #b8cadf}
             a.button::after, a.button::before{content:""}
             a.button:hover{background-color: #00000000; text-decoration-color: #000000}
