--- a/buttons.html
+++ b/buttons.html
@@ -11,7 +11,7 @@
             h1{font-size: min(10vw, 3rem); font-style: italic;}
             h2{margin-bottom: 10px; font-style: italic; font-size: 1.5rem;}
             h2::before{content: "- "; color: #5d5e6c;}
-            a{color: #101010; text-decoration-color:#5d5e6c;font-style: italic; text-decoration-thickness: 2px;}
+            a{color: #101010; text-decoration-color:#5d5e6c;text-decoration-thickness: 2px;}
             a:hover{text-decoration-color:#101010; background-color: #101010; color: #b8cadf}
             a.button::after, a.button::before{content:""}
             a.button:hover{background-color: #00000000; text-decoration-color: #000000}
