--- a/buttons.html
+++ b/buttons.html
@@ -30,7 +30,7 @@
                 <li><a href="/website/doodles">doodles</a></li>
                 <li><a href="/website/blender">blender</a></li>
                 <li><a href="/website/misc">misc</a></li>
-                <li><b>buttons</b></li>
+                <li><b><i>buttons</i></b></li>
                 <li><a href="/website/sitelog">sitelog</a></li>
             </ul></div>
         </div>
@@ -47,7 +47,7 @@
             <a href="/website/doodles">doodles</a> . 
             <a href="/website/blender">blender</a> . 
             <a href="/website/misc">misc</a><br>
-            <b>buttons</b> . 
+            <b><i>buttons</i></b> . 
             <a href="/website/sitelog">sitelog</a>
         </details>
 
