--- a/doodles.html
+++ b/doodles.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"> 
-        <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://fonts.googleapis.com/css2?family=Literata:ital,wght@0,400;1,700&display=swap" rel="stylesheet"> 
         <title>{doodles}</title>
-        <link href="styles/style.css" rel="stylesheet" type="text/css" media="all">
-    <style>
+        <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
+        <link href="/website/styles/test.css" rel="stylesheet" type="text/css" media="all"><style>
         body{background-image:url(doodles/background.jpg);
             background-repeat:no-repeat;
             background-size:cover;
             color: #101010;
-            font-family: 'Libre Baskerville', serif;}
+            font-family: 'Literata', serif;}
         .c, .m, .y{background-color: #f0f0f0; width: 29%; margin-top: 10px}
         .c:hover{background-color: #003351;}
         .m:hover{background-color: #640c25;}
@@ -19,17 +18,50 @@
         h1{font-size: min(10vw, 3rem); font-style: italic;}
         h2{margin-bottom: 10px; font-style: italic; font-size: 1.5rem;}
         h2::before{content: "- "; color: #5d5e6c;}
-        a{font-weight: bold; color: #101010; text-decoration-color:#5d5e6c;font-style: italic; text-decoration-thickness: 2px;}
+        a{color: #101010; text-decoration-color:#5d5e6c; text-decoration-thickness: 2px;}
         a:hover{text-decoration-color:#101010; background-color: #101010; color: #a2a4a3}
         a.button:hover{text-decoration-color:#00000000; background-color: #00000000}
-        .page{border-color: #5d5e6c}
-    </style>
+        .sidebar, .main{border-color: #5d5e6c}
+        </style>
     </head>
-    <body><div class="page"><div class="main">
+
+    <body>
+        <div class="sidebar">
+            <div>
+            <p><a href="/website/home">home</a></p>
+            <ul>
+                <li><a href="/website/about">about</a></li>
+                <li><a href="/website/musicians">musicians</a></li>
+                <li><a href="/website/websites">websites</a></li>
+                <li><a href="/website/words">words</a></li>
+                <li><b><i>doodles</i></b></li>
+                <li><a href="/website/blender">blender</a></li>
+                <li><a href="/website/misc">misc</a></li>
+                <li><a href="/website/buttons">buttons</a></li>
+                <li><a href="/website/sitelog">sitelog</a></li>
+            </ul></div>
+        </div>
+        <div class="main">
+            
         <img src="doodles/doodles.gif" alt="{doodles}" style="width: 60%">
-        <br>< <a class="back" href="home">home</a>
+    
+        <details class="navbar">
+            <summary><a href="/website/home">home</a></summary>
+            <a href="/website/about">about</a> . 
+            <a href="/website/musicians">musicians</a> . 
+            <a href="/website/websites">websites</a><br>
+            <a href="/website/words">words</a> . 
+            <b><i>doodles</i></b> . 
+            <a href="/website/blender">blender</a> . 
+            <a href="/website/misc">misc</a><br>
+            <a href="/website/buttons">buttons</a> . 
+            <a href="/website/sitelog">sitelog</a>
+        </details>
+
         <p>hi! this is a place where i'll put a bunch of my drawings, i like to doodle a lot and want to share some of them with you! i hope you like looking at them! (more to come (hopefully (probably)))</p>
         <a href="doodles/people" class="button"><img src="doodles/people.gif" alt="people button"                    style="border: solid #05a1fc min(5px, 0.75vw)" class="c"></a>
         <a href="doodles/ruler_and_compass" class="button"><img src="doodles/rac.gif" alt="ruler and compass button" style="border: solid #fc074c min(5px, 0.75vw)" class="m"></a>
         <a href="doodles/etc" class="button"><img src="doodles/etc.gif" alt="etc button"                             style="border: solid #ffb400 min(5px, 0.75vw)" class="y"></a>
-    </div></div></body></html>
+        </div>
+    </body>
+</html>
