--- a/doodles.html
+++ b/doodles.html
@@ -43,7 +43,7 @@
         </div>
         <div class="main">
             
-        <img src="doodles/doodles.gif" alt="{doodles}" style="width: 60%">
+        <img src="doodles/doodles.gif" alt="{doodles}" style="width: 60%"><br>
     
         <details class="navbar">
             <summary><a href="/website/home">home</a></summary>
