--- a/doodles/etc.html
+++ b/doodles/etc.html
@@ -5,7 +5,7 @@
         <title>{doodles}</title>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="/website/styles/test.css" rel="stylesheet" type="text/css" media="all"><style>
-        body{background-image:url(doodles/background.jpg);
+        body{background-image:url(background.jpg);
             background-repeat:no-repeat;
             background-size:cover;
             color: #101010;
@@ -18,6 +18,7 @@
         a:hover{text-decoration-color:#101010; background-color: #101010; color: #a2a4a3}
         a.button:hover{text-decoration-color:#00000000; background-color: #00000000}
         .sidebar, .main{border-color: #5d5e6c}
+        .sidebar div{margin: 24px}
         img{border: solid #080808 min(3px, 0.6vw)}
         .header{border: solid 0px}
         #drawings{line-height:0; column-count: 1; column-gap: 12px; margin-top: 20px}
