--- a/doodles/etc.html
+++ b/doodles/etc.html
@@ -35,7 +35,7 @@
             <p><a href="/website/doodles">doodles</a></p>
             <ul>
                 <li><a href="people">people</a></li>
-                <li><a href="ruler_and_compass">ruler and compass</a></li>
+                <li><a href="ruler and compass">ruler and compass</a></li>
                 <li><a href="etc">etc</a></li>
             </ul></div>
         </div>
