--- a/doodles/etc.html
+++ b/doodles/etc.html
@@ -35,8 +35,8 @@
             <p><a href="/website/doodles">doodles</a></p>
             <ul>
                 <li><a href="people">people</a></li>
-                <li><a href="ruler and compass">ruler and compass</a></li>
-                <li><a href="etc">etc</a></li>
+                <li><a href="ruler_and_compass">ruler and compass</a></li>
+                <li><b>etc</b></li>
             </ul></div>
         </div>
         <div class="main">
@@ -46,8 +46,8 @@
         <details class="navbar">
             <summary><a href="/website/doodles">back to doodles</a></summary>
             <a href="people">people</a> . 
-            <a href="ruler and compass">ruler_and_compass</a> . 
-            <a href="etc">etc</a>
+            <a href="ruler_and_compass">ruler and compass</a> . 
+            <b>etc</b>
         </details>
 
         <div id="drawings">
