--- a/doodles/etc.html
+++ b/doodles/etc.html
@@ -36,7 +36,7 @@
             <ul>
                 <li><a href="people">people</a></li>
                 <li><a href="ruler_and_compass">ruler and compass</a></li>
-                <li><b>etc</b></li>
+                <li><b><i>etc</i></b></li>
             </ul></div>
         </div>
         <div class="main">
@@ -47,7 +47,7 @@
             <summary><a href="/website/doodles">back to doodles</a></summary>
             <a href="people">people</a> . 
             <a href="ruler_and_compass">ruler and compass</a> . 
-            <b>etc</b>
+            <b><i>etc</i></b>
         </details>
 
         <div id="drawings">
