--- a/doodles/etc.html
+++ b/doodles/etc.html
@@ -70,7 +70,7 @@
             <img src="etc/creature2.jpg" alt="creature2">
             <img src="etc/square.jpg" alt="square">
             <img src="etc/creature3.png" alt="creature3">
-            </div>                           style="border: solid #ffb400 min(5px, 0.75vw)" class="y"></a>
+            </div>
         </div>
     </body>
 </html>
