--- a/doodles/etc.html
+++ b/doodles/etc.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link href="https://fonts.googleapis.com/css2?family=Literata:ital,wght@0,400;1,700&display=swap" rel="stylesheet"> 
-        <title>{doodles}</title>
+        <title>{etc}</title>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="/website/styles/test.css" rel="stylesheet" type="text/css" media="all"><style>
         body{background-image:url(background.jpg);
