--- a/doodles/people.html
+++ b/doodles/people.html
@@ -34,7 +34,7 @@
             <div>
             <p><a href="/website/doodles">doodles</a></p>
             <ul>
-                <li><b><i><people</i></b></li>
+                <li><b><i>people</i></b></li>
                 <li><a href="ruler_and_compass">ruler and compass</a></li>
                 <li><a href="etc">etc</a></li>
             </ul></div>
