--- a/misc.html
+++ b/misc.html
@@ -4,7 +4,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet">
         <title>> misc</title>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-        <link href="styles/misc.css" rel="stylesheet" type="text/css" media="all"><style>
+        <link href="/website/styles/miscstyle.css" rel="stylesheet" type="text/css" media="all"><style>
         .journal, .notes, .folder, .exit{padding-left: 20px}
             div.indicator{content: url(misc/folder/dotdotdot.png); margin: 0 auto; display: block}
             div.journal:hover ~ div.indicator{content: url(misc/folder/journal.png);}
