--- a/misc/folder.html
+++ b/misc/folder.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet"> 
-        <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet">
         <title>> folder</title>
+        <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="/website/styles/miscstyle.css" rel="stylesheet" type="text/css" media="all"><style>
         details{max-width: 750px;
         border-left: solid #15c405 3px;
@@ -12,12 +12,31 @@
         ul{margin: 0px}
         details details{margin-left: 10px}
         summary{font-size: 1.1rem}
-        </style></head>
+        </style>
+    </head>
 
-    <body><div class="page"><div class="main">
-    <h1>folder</h1>
-    < <a class="back" href="/website/misc">go back</a>
-    <p>You open the folder.</p></div>
+    <body>
+        <div class="sidebar">
+            <div>
+            <p><a href="/website/misc">misc</a></p>
+            <ul>
+                <li><a href="journal">journal</a></li>
+                <li><a href="phrases">wall</a></li>
+                <li><b>folder</b></li>
+            </ul></div>
+        </div>
+        <div class="main">
+            
+        <h1 style="font-size: 3rem">folder</h1>
+    
+        <details class="navbar">
+            <summary><a href="/website/misc">back to misc</a></summary>
+            <a href="journal">journal</a> . 
+            <a href="phrases">wall</a> . 
+            <b>folder</b><br>
+        </details>
+
+        <p>You open the folder.</p></div>
     <details>
         <summary><a>index(es)</a></summary>
         <ul>
@@ -80,4 +99,6 @@
             <li><a href="folder/redlonely.png">redlonely</a>: a version of a doodle that i wanted to use for status.cafe, but i don't think it looks very good.</li>
         </ul>
     </details>
-    </div></body></html>
+        </div>
+    </body>
+</html>
