--- a/misc/folder.html
+++ b/misc/folder.html
@@ -36,7 +36,7 @@
             <b>folder</b><br>
         </details>
 
-        <p>You open the folder.</p></div>
+        <p>You open the folder.</p>
     <details>
         <summary><a>index(es)</a></summary>
         <ul>
