--- a/misc/folder.html
+++ b/misc/folder.html
@@ -11,7 +11,7 @@
         margin: 10px 0px}
         ul{margin: 0px}
         details details{margin-left: 10px}
-        summary{font-size: 1.1rem}
+        summary{font-size: 1.1rem; font-weight: bold;}
         </style>
     </head>
 
