--- a/misc/journal.html
+++ b/misc/journal.html
@@ -11,6 +11,9 @@
         margin: 40px auto;
         max-width: 100%}
         h2{margin:0 0 16px 0}
+        @media only screen and (max-width: 600px) {
+            .entry{margin: 40px -24px}
+        }
         </style>
     </head>
 
