--- a/misc/journal.html
+++ b/misc/journal.html
@@ -9,10 +9,10 @@
         border-left: solid #15c405 5px;
         padding: 20px;
         margin: 40px auto;
-        max-width: 100%}
+        max-width: calc(100% + 5px)}
         h2{margin:0 0 16px 0}
         @media only screen and (max-width: 600px) {
-            .entry{margin: 40px -24px}
+            .entry{margin: 40px -26px}
         }
         </style>
     </head>
